assets/animation.css
.puckContainer {
    position: absolute;
    width: 100%;
    height: 90%;
    float: left;
    bottom: 0;
    transform: rotateZ(45deg);
    z-index: 6;
    overflow: hidden;
}

.hockeyPuck {
    position: absolute;
    top: 50%;
    height: 4px;
    margin-top: 5rem;
    background: linear-gradient(-45deg,rgba(40, 40, 65, 0.4), rgba(0, 0, 255, 0));
    border-radius: none;
    filter: drop-shadow(0 0 3px rgba(105, 155, 255, 1));
    animation: tail 8500ms ease-in-out infinite, hockeyPuck 8500ms ease-in-out infinite;
}
.hockeyPuck::before {
    content: '';
    position: absolute;
    bottom: calc(50% - 1px);
    right: 0;
    height: 4px;
    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(0, 0, 0), rgba(0, 0, 255, 0));
    transform: translateX(50%);
    border-radius: 100%;
    animation: puckShadow 8000ms ease-in-out infinite;
}
.hockeyPuck::after {
    content: '';
    position: absolute;
    bottom: calc(50% - 1px);
    right: 0;
    height: 6px;
    background: linear-gradient(-45deg, rgba(0, 0, 255, 0), rgb(0, 0, 0), rgba(0, 0, 255, 0));
    border-radius: 100%;
    animation: puckShadow 8500ms ease-in-out infinite;
    transform: translateX(50%);
}

.hockeyPuck:nth-child(1) {
    top: calc(50% - 40px);
    left: calc(0% - 85px);
    animation-delay: 1055ms;
}
.hockeyPuck:nth-child(1)::before, .hockeyPuck:nth-child(1)::after {
    animation-delay: 1055ms;
}

.hockeyPuck:nth-child(2) {
    top: calc(50% - 85px);
    left: calc(0% - 220px);
    animation-delay: 2500ms;
}
.hockeyPuck:nth-child(2)::before, .hockeyPuck:nth-child(2)::after {
    animation-delay: 2500ms;
}

.hockeyPuck:nth-child(3) {
    top: calc(50% - 75px);
    left: calc(0% - 245px);
    animation-delay: 3000ms;
}
.hockeyPuck:nth-child(3)::before, .hockeyPuck:nth-child(3)::after {
    animation-delay: 3000ms;
}

.hockeyPuck:nth-child(4) {
    top: calc(50% - 20px);
    left: calc(0% - 95px);
    animation-delay: 6500ms;
}
.hockeyPuck:nth-child(4)::before, .hockeyPuck:nth-child(4)::after {
    animation-delay: 6500ms;
}

.hockeyPuck:nth-child(5) {
    top: calc(50% - 130px);
    left: calc(0% - 145px);
    animation-delay: 8050ms;
}
.hockeyPuck:nth-child(5)::before, .hockeyPuck:nth-child(5)::after {
    animation-delay: 8050ms;
}

.hockeyPuck:nth-child(6) {
    top: calc(50% - 80px);
    left: calc(0% - 525px);
    animation-delay: 10000ms;
}
.hockeyPuck:nth-child(6)::before, .hockeyPuck:nth-child(5)::after {
    animation-delay: 10000ms;
}

.hockeyPuck:nth-child(7) {
    top: calc(50% - 45px);
    left: calc(0% - 80px);
    animation-delay: 11000ms;
}
.hockeyPuck:nth-child(7)::before, .hockeyPuck:nth-child(5)::after {
    animation-delay: 13000ms;
}



@keyframes tail {
    0% {
        width: 0;
   }
    30% {
        width: 2.5em;
   }
    100% {
        width: 0;
   }
}
@keyframes puckShadow {
    0% {
        width: 1em;
   }
    50% {
        width: 1.27em;
   }
    100% {
        width: 0;
   }
}

@keyframes hockeyPuck {
    0% {
        transform: translateX(0);
   }
    100% {
        transform: translateX(620px);
   }
}

@media screen and (max-width: 768px) and (orientation: landscape) {
    @keyframes hockeyPuck {
        0% {
            transform: translateX(0);
       }
        100% {
            transform: translateX(1200px);
       }
    }
  }

@media (min-width: 1025px) {
    .puckContainer {
        float: left;
    }

    /* .hockeyPuck {
        left: 30%;
    } */

    @keyframes hockeyPuck {
        0% {
            transform: translateX(0);
       }
        100% {
            transform: translateX(93rem);
       }
    }
}

